<resources>
    <string name="app_name">MineSweeper</string>
    <string name="average_score">Average Score</string>
    <string name="average_time">Average Time</string>
    <string name="average_difficulty">Average Difficulty</string>
    <string name="games_played">Games Played</string>
    <string name="games_won">Games Won</string>
    <string name="games_lost">Games Lost</string>
    <string name="best_time">Best Time</string>
    <string name="worst_time">Worst Time</string>
    <string name="best_score">Best Score</string>
    <string name="worst_score">Worst Score</string>
</resources>
